Bug 115317 - EDITING: Unable to paste URL when editing a cell
Summary: EDITING: Unable to paste URL when editing a cell
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Paul Trojahn
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
: 113878 (view as bug list)
Depends on:
Blocks: Calc-Cells Hyperlink-Calc
  Show dependency treegraph
 
Reported: 2018-01-30 20:23 UTC by landi
Modified: 2022-06-08 05:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
hyperlink formatting bug (55.15 KB, image/gif)
2018-03-22 10:06 UTC, Tim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description landi 2018-01-30 20:23:44 UTC
I have a URL hyperlink in a cell, then I copy the cell. If I single-click another cell, then it will paste as it should into that cell. But if I double-click into that new cell, then the URL hyperlink doesn't paste.

If I'm only copy/pasting a URL/link with no other text, then nothing gets pasted. If I'm copy/pasting some other text and the URL/link, then the other text gets pasted, but not the URL/link.

If the URL/link is not formatted as a URL or hyperlink, then it pastes fine because it thinks it's just regular text. So I guess this has something to do with the hyperlink formatting.

If I do Paste Special as Unformatted Text, then it pastes as it should, but obviously without the hyperlink

Regression: this happens on both of these versions:

Version: 5.4.4.2
Build ID: 2524958677847fb3bb44820e40380acbe820f960
CPU threads: 8; OS: Mac OS X 10.13.3; UI render: default; 
Locale: en-US (en_US.UTF-8); Calc: group

and

Version: 6.1.0.0.alpha0+
Build ID: 85b3c799ede62a3d7ad0493fc80b629214956601
CPU threads: 8; OS: Mac OS X 10.13.3; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-01-29_06:03:03
Locale: en-US (en_US.UTF-8); Calc: group threaded
Comment 1 Telesto 2018-01-31 20:30:31 UTC
Repro with
Version: 6.1.0.0.alpha0+
Build ID: ea89dabf8b6363972190a6b50c527c418d51c2c7
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-01-27_22:55:15
Locale: nl-NL (nl_NL); Calc: CL

but not with
Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Xisco Faulí 2018-02-01 10:17:36 UTC
Regression introduced by:

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2016-04-10 05:51:19 +0200
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2016-04-10 05:55:55 +0200
commit be829fa15777b3b1a6727eee231c89894e7c425e (patch)
tree 24dc7fa1287928f7e5e9e6dae8377b0bc6a8982d
parent 7b9a5e8124328da9d81aed58cf944c91560a7c07 (diff)
don't pool SvxFieldItem, tdf#92773
In documents with many different hyperlinks pooling them is incredibly
slow. I doubt that in most cases the hyperlinks are the same so let us
just not pool them.

Bisected with: bibisect-linux-64-5.2

Adding Cc: to Markus Mohrhard
Comment 3 Tim 2018-03-22 10:06:57 UTC
Created attachment 140810 [details]
hyperlink formatting bug

Also there is bug when you trying to drag cell by holding mouse btn on the right-down corner of the cell. Hyperlink formatting is not preserves if cell's content ends with a number.
Comment 4 Buovjaga 2018-06-02 15:22:21 UTC
*** Bug 113878 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2018-11-02 05:23:19 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/68af083f9a8e3904aa3c341da5c598212da68f6f%5E%21

tdf#115317 Fix empty url representation

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 landi 2018-11-05 19:44:39 UTC
From what I can tell, this appears to be working as it should in this version

Version: 6.2.0.0.alpha1+
Build ID: f825e6d4082c0d0beb1c95b881f6a2ee9bfc9161
CPU threads: 8; OS: Mac OS X 10.14.1; UI render: default; VCL: osx; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-11-04_23:17:53
Locale: en-US (en_US.UTF-8); Calc: threaded

(hopefully I tested it correctly)
Comment 7 Xisco Faulí 2018-11-06 10:30:12 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 990761f5297ef7bff78f62e7df63d4d4a20616a6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Paul Trojahn, thanks for the quick fix! Do you think it should be cherry-picked to 6-1 branch ?
Comment 8 Commit Notification 2018-11-06 20:59:49 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/821c9fd85bf49ddab9968c7f1787a265c02d1f01%5E%21

tdf#115317 Fix empty url representation

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.