tdf#115317 Fix empty link representation

ScTabEditEngine doesn't overload CalcFieldValue, so the function in
EditEngine returns a single space as representation. By inheriting from
ScFieldEditEngine the representation is calculated correctly.

Change-Id: I6f3be8bd2c3936acf9f3d082c25c080bd3cbee76